--- a/css/main.less
+++ b/css/main.less
@@ -13,8 +13,12 @@ body {
 }
 
 /* -------
-team builder
+title screen
 ------- */
+
+.body-title-screen {
+    margin-top: 30px;
+}
 
 .game-title {
     margin-top: 20px;
